# doggr_sp23

./: .gitignore  docker-compose.yaml
.github/workflows/: test_and_deploy.yml
auth_rs/: .env.example  Cargo.toml  Dockerfile
auth_rs/src/: handlers.rs  lib.rs  main.rs  routes.rs
backend/: .dockerignore  .env  .env.example  .eslintignore  .eslintrc.json  .gitignore  .prettierignore  .prettierrc  Dockerfile  nodemon.json  package.json  pnpm-lock.yaml  tsconfig.json  typedoc.json
backend/public/: index.html
backend/src/: app.ts  index.ts  request.ts  response.ts  routes.ts  server.ts  types.ts
backend/src/db/: mikro-orm.config.js  mikro-orm.config.ts
backend/src/plugins/: auth.ts  badwords.ts  http_search.ts  mikro.ts  minio.ts
backend/src/routes/: match_routes.ts  message_routes.ts  routes.ts  user_routes.ts
backend/test/: app.test.ts
frontend/: .dockerignore  .env.example  .env.ts.example  .eslintrc.cjs  .gitignore  .prettierignore  .prettierrc  Dockerfile  cypress.config.ts  index.html  nginx.conf  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  typedoc.json  vite.config.ts
frontend/electron/: main.ts
frontend/src/: App.tsx  Components.tsx  DoggrRoutes.tsx  DoggrTypes.ts  InitialState.ts  main.tsx
frontend/src/Components/: CreateProfile.tsx  ExampleButton.tsx  HomePage.tsx  Login.tsx  Logout.tsx  Match.tsx  MatchActionBar.tsx  MatchPage.tsx  Message.tsx  MessageHistory.tsx  Navigation.tsx  Profile.tsx  ProtectedRoute.tsx  UsersList.tsx
frontend/src/Services/: Auth.tsx  HttpClient.tsx  (+5 more)
frontend/test/: App.test.tsx  setup.ts
(+23 files in other folders)
